--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "marked": "^4.0.8",
     "next": "latest",
     "next-themes": "^0.0.15",
     "react": "^17.0.2",
